增加单曲循环和上一首功能

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li title="搜索" class="iconfont">&#xe626;</li>
           <li title="登录" class="iconfont">&#xe616;</li>
           <li title="设置" class="iconfont">&#xe601;</li>
-          <li title="关于" class="iconfont">&#xe62e;</li>
+          <li title="关于" class="iconfont">&#xe608;</li>
         </ul>
         <div class="content">
           <panel-channel class="active"></panel-channel>
