--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DBFM</title>
+    <title>TimoFM</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/css/index.css" />
     <script src="bower_components/platform/platform.js"></script>
