--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="import" href="components/x-mask/index.html" />
     <link rel="import" href="components/x-view/index.html" />
 </head>
-<!--<body  style="-webkit-app-region: drag" class="bg c1">-->
-<body   class="bg c1">
+<body  style="-webkit-app-region: drag" class="bg c1">
+<!-- <body   class="bg c1"> -->
 
 <div id="wrapper">
     <x-switchTab class="sidebar">
@@ -46,9 +46,6 @@
     <song-face></song-face>
     <x-view></x-view>
     <x-mask></x-mask>
-    <script>
-        require('electron-drag')('body')
-    </script>
 </div>
 </body>
 </html>
