--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <link rel="import" href="components/x-mask/index.html" />
     <link rel="import" href="components/x-view/index.html" />
 </head>
-<body  style="-webkit-app-region: drag" class="bg c1">
-<!-- <body   class="bg c1"> -->
 
+<body class="bg c1">
 <div id="wrapper">
     <x-switchTab class="sidebar">
         <ul class="nav">
