--- a/index.html
+++ b/index.html
@@ -46,5 +46,10 @@
     <x-view></x-view>
     <x-mask></x-mask>
 </div>
+<script>
+if(process.platform != 'darwin') {
+    document.body.classList.add('not-osx')
+}
+</script>
 </body>
 </html>
